Added job detail viewController and its viewModel, Added localize string

--- a/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
+++ b/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
@@ -16,3 +16,6 @@
 "job_listing_title" = "Jobs";
 "job_listing_expired" = "Expired";
 "job_listing_applied" = "Applied";
+
+"job_detail_description_title" = "Job Description:";
+"job_detail_apply_button" = "Apply for this job";
