Added my application viewController and its viewModel, Added home tabBarController to host job listing and my application

--- a/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
+++ b/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
@@ -19,3 +19,5 @@
 
 "job_detail_description_title" = "Job Description:";
 "job_detail_apply_button" = "Apply for this job";
+
+"my_application_title" = "My Application";
