Added profile viewController and its viewModel, Added profile viewController in homeTabBarController

--- a/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
+++ b/ios-seek-job-application-app/Resources/en.lproj/Localizable.strings
@@ -21,3 +21,6 @@
 "job_detail_apply_button" = "Apply for this job";
 
 "my_application_title" = "My Application";
+
+"profile_title" = "My Profile";
+"profile_logout_button" = "Logout";
